@@ -20,3 +20,9 @@ RUN mvn clean package -DskipTests
 
 FROM tomcat:10.1.18-jre17-temurin-jammy
 COPY --from=build /tmp/target/tomcat-redis-manager-*-shaded.jar $CATALINA_HOME/lib
+ENV JAVA_OPTS=--"--add-opens java.base/java.lang=ALL-UNNAMED \
+                 --add-opens java.base/java.lang.invoke=ALL-UNNAMED \
+                 --add-opens java.base/java.util=ALL-UNNAMED \
+                 --add-opens java.base/java.util.regex=ALL-UNNAMED \
+                 --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED"
+EXPOSE 8080
